added ring cursor

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="nav">
         <ul>
-          <li>Music</li>
+          <li><a href="">Music</a></li>
           <li>Bio</li>
           <li>News</li>
           <li>Contact</li>
