updated assets source paths

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img
           class="eye-gif"
           id="eye_gif"
-          src="https://media.discordapp.net/attachments/1143149877963005976/1187372962769277030/GIF_2.gif?ex=6596a63e&is=6584313e&hm=1dd6a7fd8eeb7b0299bf9a9042ba12c4fd9cd365b1b8b725ba0ddd1e9be9951f&="
+          src="https://media.discordapp.net/attachments/1143149877963005976/1187372962769277030/GIF_2.gif?ex=674c583e&is=674b06be&hm=52ec0642278fd6858a1bc66bb919730fa76dd1681a58e2d736fd68368ce23aa7&=&width=581&height=501"
           alt=""
         />
         <div class="eye-line" id="eye_line"></div>
